# AlignOS

./: .env.example  .gitignore  LICENSE  README.md  database.py  llm_client.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  verify_system.py
Docs/: API.md  ARCHITECTURE.md  DATA_MODEL.md  DEPLOYMENT.md  MCP_TOOLS.md  Product Requirements Document.txt  README.md  ROADMAP.md  SECURITY.md  SETUP.md  prd.md
app/: __init__.py  concurrency.py  config.py  main.py  security.py  socket_mode.py  store.py
app/db/: __init__.py  base.py  memory.py  postgres_repo.py  supabase_repo.py
app/flows/: __init__.py  ask.py  cleanup.py  conflict.py  decision.py  execution.py  health.py  prd.py  reminder.py  summary.py  timeline.py
app/intent/: __init__.py
app/llm/: __init__.py  client.py  heuristics.py
app/mcp_client/: __init__.py
app/rts/: __init__.py
app/slack/: __init__.py  cards.py  handlers.py
mcp_server/: __init__.py  core.py  server.py
migrations/: 0001_init.sql  0002_slack_ids_text.sql  0003_cleanup_and_reminders.sql
scripts/: loadtest.py
supabase/migrations/: 0001_init.sql
tests/: conftest.py  test_concurrency.py  test_flows.py  test_handlers.py  test_health.py  test_rts.py  test_security.py  test_store.py  test_upgrades.py
