[project]
name = "alignos"
version = "0.1.0"
description = "Slack-native AI agent that turns team conversations into verified team memory"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
